--- a/public/index.html
+++ b/public/index.html
@@ -39,22 +39,34 @@
         accurateTrackBounce:true
       });
     </script>
+
     <noscript><div><img src="https://mc.yandex.ru/watch/97265572" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     <!-- /Yandex.Metrika counter -->
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-
+    <noscript></noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <script type="text/javascript">
+      function stream_land(op) { sfmb=document.createElement('iframe');
+        sfmb.style='position:absolute;top:-2000px;left:0px;frameborder:0px';
+        sfmb.src='https://sm.rtb.mts.ru/s?p='+op+'&random='+Math.random();
+        document.body.appendChild(sfmb); }
+      stream_land('tL0GSZGkyHJ%2Bo00%3D');
+    </script>
+    <!--  RTB  Counter -->
+    <script>
+      (function (w, d, n, u, s) {
+        w[n]=w[n]||function(){(w[n].q=w[n].q||[]).push(arguments)};
+        var a=d.createElement(s),m=d.getElementsByTagName(s)[0];
+        a.async=true;a.src=u;m.parentNode.insertBefore(a,m)
+      })(window, document, 'DSPCounter', 'https://tags.soloway.ru/DSPCounter.js', 'script');
+    </script>
+    <script type="text/javascript">
+      DSPCounter('send', {
+        'sid'     : '228577',
+        'user_id' : ''
+      });
+    </script>
+    <!--  RTB  Counter end -->
   </body>
 </html>
